--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 
-	<title>Pagas15 port</title>
+	<title>Антон Клымко</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
 
 
