--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -23,7 +23,7 @@
 		<div class="wrapper">
 			<div class="headbox-wrap">
 				<h1>Я Антон Клымко</h1>
-				<p class="headbox-wrap__text">Я верстальщик или front end как вам удобно, люблю верстать разные <a class="headbox-wrap__text--link" href="#project">странички</a> паралельно учась новым и красивым технологим</p>
+				<p class="headbox-wrap__text">Я верстальщик или front end как вам удобно, люблю верстать разные <a class="headbox-wrap__text--link" href="#project">странички</a> паралельно учась новым и красивым технологиям</p>
 				<div class="hr"></div>
 				<div class="social">
 					<a href="https://t.me/pagas15" class="social__link"><i class="fa fa-telegram" aria-hidden="true"></i></a>
