--- a/test/index.html
+++ b/test/index.html
@@ -10,9 +10,9 @@
 
 	<meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/slick.css">
 	
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/styles.min.css">
 
 </head>
@@ -25,98 +25,122 @@
 				<div class="popular-wrap__slider">
 					<div>
 						<div class="popular-wrap__item">
-							<div class="popular-wrap__img">
-								<img src="img/1.png" alt="">
-							</div>
-							<p class="popular-wrap__name-game">Fortnite</p>
+							<a href="#">
+								<div class="popular-wrap__img">
+									<img src="img/1.png" alt="">
+								</div>
+								<p class="popular-wrap__name-game">Fortnite</p>
+							</a>
 						</div>
 					</div>
 					<div>
 						<div class="popular-wrap__item">
-							<div class="popular-wrap__img">
-								<img src="img/2.png" alt="">
-							</div>
-							<p class="popular-wrap__name-game">League of Legends</p>
+							<a href="#">
+								<div class="popular-wrap__img">
+									<img src="img/2.png" alt="">
+								</div>
+								<p class="popular-wrap__name-game">League of Legends</p>
+							</a>
 						</div>
 					</div>
 					<div>
 						<div class="popular-wrap__item">
-							<div class="popular-wrap__img">
-								<img src="img/3.png" alt="">
-							</div>
-							<p class="popular-wrap__name-game">PLAYERUNKNOWN'S BATTLEGROUNDS</p>
+							<a href="#">
+								<div class="popular-wrap__img">
+									<img src="img/3.png" alt="">
+								</div>
+								<p class="popular-wrap__name-game">PLAYERUNKNOWN'S BATTLEGROUNDS</p>
+							</a>
 						</div>
 					</div>
 					<div>
 						<div class="popular-wrap__item">
-							<div class="popular-wrap__img">
-								<img src="img/4.png" alt="">
-							</div>
-							<p class="popular-wrap__name-game">Grand Theft Auto V</p>
+							<a href="#">
+								<div class="popular-wrap__img">
+									<img src="img/4.png" alt="">
+								</div>
+								<p class="popular-wrap__name-game">Grand Theft Auto V</p>
+							</a>
 						</div>
 					</div>
 					<div>
 						<div class="popular-wrap__item">
-							<div class="popular-wrap__img">
-								<img src="img/5.png" alt="">
-							</div>
-							<p class="popular-wrap__name-game">Overwatch</p>
+							<a href="#">
+								<div class="popular-wrap__img">
+									<img src="img/5.png" alt="">
+								</div>
+								<p class="popular-wrap__name-game">Overwatch</p>
+							</a>
 						</div>
 					</div>
 					<div>
 						<div class="popular-wrap__item">
-							<div class="popular-wrap__img">
-								<img src="img/6.png" alt="">
-							</div>
-							<p class="popular-wrap__name-game">Apex Legends</p>
+							<a href="#">
+								<div class="popular-wrap__img">
+									<img src="img/6.png" alt="">
+								</div>
+								<p class="popular-wrap__name-game">Apex Legends</p>
+							</a>
 						</div>
 					</div>
 					<div>
 						<div class="popular-wrap__item">
-							<div class="popular-wrap__img">
-								<img src="img/1.png" alt="">
-							</div>
-							<p class="popular-wrap__name-game">Fortnite</p>
+							<a href="#">
+								<div class="popular-wrap__img">
+									<img src="img/1.png" alt="">
+								</div>
+								<p class="popular-wrap__name-game">Fortnite</p>
+							</a>
 						</div>
 					</div>
 					<div>
 						<div class="popular-wrap__item">
-							<div class="popular-wrap__img">
-								<img src="img/2.png" alt="">
-							</div>
-							<p class="popular-wrap__name-game">League of Legends</p>
+							<a href="#">
+								<div class="popular-wrap__img">
+									<img src="img/2.png" alt="">
+								</div>
+								<p class="popular-wrap__name-game">League of Legends</p>
+							</a>
 						</div>
 					</div>
 					<div>
 						<div class="popular-wrap__item">
-							<div class="popular-wrap__img">
-								<img src="img/3.png" alt="">
-							</div>
-							<p class="popular-wrap__name-game">PLAYERUNKNOWN'S BATTLEGROUNDS</p>
+							<a href="#">
+								<div class="popular-wrap__img">
+									<img src="img/3.png" alt="">
+								</div>
+								<p class="popular-wrap__name-game">PLAYERUNKNOWN'S BATTLEGROUNDS</p>
+							</a>
 						</div>
 					</div>
 					<div>
 						<div class="popular-wrap__item">
-							<div class="popular-wrap__img">
-								<img src="img/4.png" alt="">
-							</div>
-							<p class="popular-wrap__name-game">Grand Theft Auto V</p>
+							<a href="#">
+								<div class="popular-wrap__img">
+									<img src="img/4.png" alt="">
+								</div>
+								<p class="popular-wrap__name-game">Grand Theft Auto V</p>
+							</a>
 						</div>
 					</div>
 					<div>
 						<div class="popular-wrap__item">
-							<div class="popular-wrap__img">
-								<img src="img/5.png" alt="">
-							</div>
-							<p class="popular-wrap__name-game">Overwatch</p>
+							<a href="#">
+								<div class="popular-wrap__img">
+									<img src="img/5.png" alt="">
+								</div>
+								<p class="popular-wrap__name-game">Overwatch</p>
+							</a>
 						</div>
 					</div>
 					<div>
 						<div class="popular-wrap__item">
-							<div class="popular-wrap__img">
-								<img src="img/6.png" alt="">
-							</div>
-							<p class="popular-wrap__name-game">Apex Legends</p>
+							<a href="#">
+								<div class="popular-wrap__img">
+									<img src="img/6.png" alt="">
+								</div>
+								<p class="popular-wrap__name-game">Apex Legends</p>
+							</a>
 						</div>
 					</div>
 				</div>
