--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -19,11 +19,12 @@
 <body>
 	<!-- https://pagas15.github.io/photograf-portfolio/ -->
 	<!-- https://pagas15.github.io/SiteForPr2%20(mini)/ -->
+	<!-- https://pagas15.github.io/test/ -->
 	<section class="headbox">
 		<div class="wrapper">
 			<div class="headbox-wrap">
 				<h1>Я Антон Клымко</h1>
-				<p class="headbox-wrap__text">Я верстальщик или front end как вам удобно, люблю верстать разные <a class="headbox-wrap__text--link" href="#project">странички</a> паралельно учась новым и красивым технологиям</p>
+				<p class="headbox-wrap__text">Я верстальщик или front end как вам удобно, люблю верстать разные <a class="headbox-wrap__text--link" href="#project">странички</a> паралельно учась новым и красивым технологим</p>
 				<div class="hr"></div>
 				<div class="social">
 					<a href="https://t.me/pagas15" class="social__link"><i class="fa fa-telegram" aria-hidden="true"></i></a>
@@ -65,6 +66,18 @@
 					<div class="project-wrap__text-box">
 						<h2>Название проэкта - "photograf-portfolio"</h2>
 						<p class="project-wrap__date">Дата начала и конца проэкта: 27.12.2019 - 29.12.2019</p>
+					</div>
+				</div>
+				<div class="project-wrap__item">
+					<div class="project-wrap__img-box">
+						<div class="project-wrap__img">
+							<img src="img/listImg/test-slider.png" alt="">
+						</div>
+						<a href="https://pagas15.github.io/test/"></a>
+					</div>
+					<div class="project-wrap__text-box">
+						<h2>Название проэкта - "test-slider"</h2>
+						<p class="project-wrap__date">Время начала и конца проэкта 04.01.2020: 16:00 - 17:48</p>
 					</div>
 				</div>
 
