--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -24,7 +24,7 @@
 		<div class="wrapper">
 			<div class="headbox-wrap">
 				<h1>Я Антон Клымко</h1>
-				<p class="headbox-wrap__text">Я верстальщик или front end как вам удобно, люблю верстать разные <a class="headbox-wrap__text--link" href="#project">странички</a> паралельно учась новым и красивым технологим</p>
+				<p class="headbox-wrap__text">Я верстальщик или front end как вам удобно, люблю верстать разные <a class="headbox-wrap__text--link" href="javascript://0" onclick="slowScroll ('#project')" >странички</a> паралельно учась новым и красивым технологим</p>
 				<div class="hr"></div>
 				<div class="social">
 					<a href="https://t.me/pagas15" class="social__link"><i class="fa fa-telegram" aria-hidden="true"></i></a>
@@ -41,7 +41,6 @@
 	</section>
 	<a href="javascript://0" onclick="slowScroll ('#project')" class="btn-botton"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
 	<section class="project" id="project">
-		<a name="project"></a>
 		<div class="wrapper">
 			<div class="project-wrap">
 				<div class="project-wrap__item">
