--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -7,7 +7,7 @@
 
 	<title>Антон Клымко</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet">
 
 	<meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/normalize.css">
@@ -20,6 +20,9 @@
 	<!-- https://pagas15.github.io/photograf-portfolio/ -->
 	<!-- https://pagas15.github.io/SiteForPr2%20(mini)/ -->
 	<!-- https://pagas15.github.io/test/ -->
+	<section class="loading">
+		<div class="loading__text">loading</div>
+	</section>
 	<section class="headbox">
 		<div class="wrapper">
 			<div class="headbox-wrap">
