--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -39,6 +39,7 @@
 	<section class="project" id="project">
 		<div class="wrapper">
 			<div class="project-wrap">
+				<h3>Мои работы</h3>
 				<div class="project-wrap__item">
 					<div class="project-wrap__img-box">
 						<div class="project-wrap__img">
