--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -24,7 +24,7 @@
 		<div class="wrapper">
 			<div class="headbox-wrap">
 				<h1>Я Антон Клымко</h1>
-				<p class="headbox-wrap__text">Я верстальщик или front end как вам удобно, люблю верстать разные <a class="headbox-wrap__text--link" href="javascript://0" onclick="slowScroll ('#project')" >странички</a> паралельно учась новым и красивым технологим</p>
+				<p class="headbox-wrap__text">Я верстальщик разработчик(front-end developer), люблю верстать разные <a class="headbox-wrap__text--link" href="javascript://0" onclick="slowScroll ('#project')" >странички</a> паралельно учась новым и красивым технологим</p>
 				<div class="hr"></div>
 				<div class="social">
 					<a href="https://t.me/pagas15" class="social__link"><i class="fa fa-telegram" aria-hidden="true"></i></a>
@@ -48,8 +48,8 @@
 						<a href="https://pagas15.github.io/SiteForPr2%20(mini)/"></a>
 					</div>
 					<div class="project-wrap__text-box">
-						<h2>Название проэкта - "Mini"</h2>
-						<p class="project-wrap__date">Дата начала и конца проэкта: 16.12.2019 - 23.12.2019</p>
+						<h2>Название проeкта - "Mini"</h2>
+						<p class="project-wrap__date">Дата начала и конца проeкта: 16.12.2019 - 23.12.2019</p>
 					</div>
 				</div>
 				<div class="project-wrap__item">
@@ -60,8 +60,8 @@
 						<a href="https://pagas15.github.io/photograf-portfolio/"></a>
 					</div>
 					<div class="project-wrap__text-box">
-						<h2>Название проэкта - "photograf-portfolio"</h2>
-						<p class="project-wrap__date">Дата начала и конца проэкта: 27.12.2019 - 29.12.2019</p>
+						<h2>Название проeкта - "photograf-portfolio"</h2>
+						<p class="project-wrap__date">Дата начала и конца проeкта: 27.12.2019 - 29.12.2019</p>
 					</div>
 				</div>
 				<div class="project-wrap__item">
@@ -72,8 +72,8 @@
 						<a href="https://pagas15.github.io/test/"></a>
 					</div>
 					<div class="project-wrap__text-box">
-						<h2>Название проэкта - "test-slider"</h2>
-						<p class="project-wrap__date">Время начала и конца проэкта 04.01.2020: 16:00 - 17:48</p>
+						<h2>Название проeкта - "test-slider"</h2>
+						<p class="project-wrap__date">Время начала и конца проeкта 04.01.2020: 16:00 - 17:48</p>
 					</div>
 				</div>
 
