--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-	<section class="loading">
+	<!-- <section class="loading">
 		<div class="loading__text">loading</div>
-	</section>
+	</section> -->
 	<section class="headbox">
 		<div class="wrapper">
 			<div class="headbox-wrap">
