fix mini and port

--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -24,7 +24,7 @@
 		<div class="wrapper">
 			<div class="headbox-wrap">
 				<h1>Я Антон Клымко</h1>
-				<p class="headbox-wrap__text">Я верстальщик разработчик(front-end developer), люблю верстать разные <a class="headbox-wrap__text--link" href="javascript://0" onclick="slowScroll ('#project')" >странички</a> паралельно учась новым и красивым технологим</p>
+				<p class="headbox-wrap__text">Я HTML-верстальщик, создаю одностраничные сайты, посадочные страницы, эксперементирую с вёрсткой</p>
 				<div class="hr"></div>
 				<div class="social">
 					<a href="https://t.me/pagas15" class="social__link"><i class="fa fa-telegram" aria-hidden="true"></i></a>
@@ -35,7 +35,6 @@
 			</div>
 		</div>
 	</section>
-	<a href="javascript://0" onclick="slowScroll ('#project')" class="btn-botton"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
 	<section class="project" id="project">
 		<div class="wrapper">
 			<div class="project-wrap">
@@ -48,8 +47,9 @@
 						<a href="https://pagas15.github.io/SiteForPr2%20(mini)/"></a>
 					</div>
 					<div class="project-wrap__text-box">
-						<h2>Название проeкта - "Mini"</h2>
-						<p class="project-wrap__date">Дата начала и конца проeкта: 16.12.2019 - 23.12.2019</p>
+						<h2>Mini</h2>
+						<p class="project-wrap__center-text">Свёрстано для креативной студии которая создаёт дизайны, бренды и сайты с посадкой на WordPress</p>
+						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, Slick slider, GoogleMapsApi</p>
 					</div>
 				</div>
 				<div class="project-wrap__item">
@@ -60,8 +60,9 @@
 						<a href="https://pagas15.github.io/photograf-portfolio/"></a>
 					</div>
 					<div class="project-wrap__text-box">
-						<h2>Название проeкта - "photograf-portfolio"</h2>
-						<p class="project-wrap__date">Дата начала и конца проeкта: 27.12.2019 - 29.12.2019</p>
+						<h2>Photograf-portfolio</h2>
+						<p class="project-wrap__center-text">Свестал сайт портволио для фотографа, было приятно верстать так как был приятный дизайн сайта</p>
+						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, Slick slider, GoogleMapsApi</p>
 					</div>
 				</div>
 				<div class="project-wrap__item">
@@ -72,8 +73,9 @@
 						<a href="https://pagas15.github.io/test/"></a>
 					</div>
 					<div class="project-wrap__text-box">
-						<h2>Название проeкта - "test-slider"</h2>
-						<p class="project-wrap__date">Время начала и конца проeкта 04.01.2020: 16:00 - 17:48</p>
+						<h2>Test-slider</h2>
+						<p class="project-wrap__center-text">Сделал для одного заказчика чисто один адоптивный слайдер, с первого раза ему всё понравилось</p>
+						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, Slick slider</p>
 					</div>
 				</div>
 
