add button view and h3 grean

--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -50,6 +50,7 @@
 						<h2>Mini</h2>
 						<p class="project-wrap__center-text">Свёрстано для креативной студии которая создаёт дизайны, бренды и сайты с посадкой на WordPress</p>
 						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, Slick slider, GoogleMapsApi</p>
+						<a class="btn-view" href="https://pagas15.github.io/SiteForPr2%20(mini)/">Посмотреть</a>
 					</div>
 				</div>
 				<div class="project-wrap__item">
@@ -63,6 +64,7 @@
 						<h2>Photograf-portfolio</h2>
 						<p class="project-wrap__center-text">Свестал сайт портволио для фотографа, было приятно верстать так как был приятный дизайн сайта</p>
 						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, Slick slider, GoogleMapsApi</p>
+						<a class="btn-view" href="https://pagas15.github.io/photograf-portfolio/">Посмотреть</a>
 					</div>
 				</div>
 				<div class="project-wrap__item">
@@ -76,6 +78,7 @@
 						<h2>Test-slider</h2>
 						<p class="project-wrap__center-text">Сделал для одного заказчика чисто один адоптивный слайдер, с первого раза ему всё понравилось</p>
 						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, Slick slider</p>
+						<a class="btn-view" href="https://pagas15.github.io/test/">Посмотреть</a>
 					</div>
 				</div>
 
