add project Form

--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -28,6 +28,7 @@
 					<a href="https://www.instagram.com/pagas15/" class="social__link"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 					<a href="https://www.facebook.com/anton.klymko" class="social__link"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 					<a href="mailto:ghbdtn1104202@gmail.com" class="social__link"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+					<a href="https://vk.com/anton_klymko.pagas15" class="social__link"><i class="fa fa-vk" aria-hidden="true"></i></a>
 				</div>
 			</div>
 		</div>
@@ -76,6 +77,20 @@
 						<p class="project-wrap__center-text">Сделал для одного заказчика чисто один адоптивный слайдер, с первого раза ему всё понравилось</p>
 						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, Slick slider</p>
 						<a class="btn-view" href="https://pagas15.github.io/test/">Посмотреть</a>
+					</div>
+				</div>
+				<div class="project-wrap__item">
+					<div class="project-wrap__img-box">
+						<div class="project-wrap__img">
+							<img src="img/listImg/form.png" alt="">
+						</div>
+						<a href="http://artrogormax.ru/"></a>
+					</div>
+					<div class="project-wrap__text-box">
+						<h2>Form</h2>
+						<p class="project-wrap__center-text">Здесь нужно было сверстать рабочую форму отправки которая отправляет данные на email, были трудности с моментом самой отправки так как это по части php, но вышло решить</p>
+						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, php</p>
+						<a class="btn-view" href="http://artrogormax.ru/">Посмотреть</a>
 					</div>
 				</div>
 
