add project Form

--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -88,7 +88,7 @@
 					</div>
 					<div class="project-wrap__text-box">
 						<h2>Form</h2>
-						<p class="project-wrap__center-text">Здесь нужно было сверстать рабочую форму отправки которая отправляет данные на email, были трудности с моментом самой отправки так как это по части php, но вышло решить</p>
+						<p class="project-wrap__center-text">Здесь нужно было сверстать рабочую форму отправки которая отправляет данные на email</p>
 						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, php</p>
 						<a class="btn-view" href="http://artrogormax.ru/">Посмотреть</a>
 					</div>
