--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -21,7 +21,7 @@
 		<div class="wrapper">
 			<div class="headbox-wrap">
 				<h1>Я Антон Клымко</h1>
-				<p class="headbox-wrap__text">Я HTML-верстальщик, создаю одностраничные сайты, посадочные страницы, эксперементирую с вёрсткой</p>
+				<p class="headbox-wrap__text">Я HTML-верстальщик, создаю одно страничные сайты, посадочные страницы, экспериментирую с вёрсткой</p>
 				<div class="hr"></div>
 				<div class="social">
 					<a href="https://t.me/pagas15" class="social__link"><i class="fa fa-telegram" aria-hidden="true"></i></a>
@@ -60,7 +60,7 @@
 					</div>
 					<div class="project-wrap__text-box">
 						<h2>Photograf-portfolio</h2>
-						<p class="project-wrap__center-text">Свестал сайт портволио для фотографа, было приятно верстать так как был приятный дизайн сайта</p>
+						<p class="project-wrap__center-text">Свестал сайт портфолио для фотографа, было приятно верстать так как был приятный дизайн сайта</p>
 						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, Slick slider, GoogleMapsApi</p>
 						<a class="btn-view" href="https://pagas15.github.io/photograf-portfolio/">Посмотреть</a>
 					</div>
@@ -74,7 +74,7 @@
 					</div>
 					<div class="project-wrap__text-box">
 						<h2>Test-slider</h2>
-						<p class="project-wrap__center-text">Сделал для одного заказчика чисто один адоптивный слайдер, с первого раза ему всё понравилось</p>
+						<p class="project-wrap__center-text">Сделал для одного заказчика чисто один адаптивный слайдер, с первого раза ему всё понравилось</p>
 						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, Slick slider</p>
 						<a class="btn-view" href="https://pagas15.github.io/test/">Посмотреть</a>
 					</div>
