add social botton

--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -94,6 +94,14 @@
 						<a class="btn-view" href="http://artrogormax.ru/">Посмотреть</a>
 					</div>
 				</div>
+				<div class="social">
+					<a href="https://t.me/pagas15" class="social__link"><i class="fa fa-telegram" aria-hidden="true"></i></a>
+					<a href="https://www.instagram.com/pagas15/" class="social__link"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+					<a href="https://www.facebook.com/anton.klymko" class="social__link"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+					<a href="mailto:ghbdtn1104202@gmail.com" class="social__link"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+					<a href="https://vk.com/anton_klymko.pagas15" class="social__link"><i class="fa fa-vk" aria-hidden="true"></i></a>
+					<a href="https://www.linkedin.com/in/pagas15/" class="social__link"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+				</div>
 
 			</div>
 		</div>
