--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 
-	<title>Антон Клымко</title>
+	<title>Anton Klymko</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet">
 
@@ -23,20 +23,22 @@
 		<div class="wrapper">
 			<div class="headbox-wrap">
 				<h1>Я Антон Клымко</h1>
-				<p class="headbox-wrap__text">Я HTML-верстальщик, создаю одно страничные сайты, посадочные страницы, экспериментирую с вёрсткой</p>
+				<p class="headbox-wrap__text">Я HTML-верстальщик, создаю одностраничные сайты, посадочные страницы, экспериментирую с вёрсткой</p>
 				<div class="hr"></div>
-				<div class="social">
-					<a href="https://t.me/pagas15" class="social__link"><i class="fa fa-telegram" aria-hidden="true"></i></a>
-					<a href="https://www.instagram.com/pagas15/" class="social__link"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-					<a href="https://www.facebook.com/anton.klymko" class="social__link"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-					<a href="mailto:ghbdtn1104202@gmail.com" class="social__link"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-					<a href="https://vk.com/anton_klymko.pagas15" class="social__link"><i class="fa fa-vk" aria-hidden="true"></i></a>
-					<a href="https://www.linkedin.com/in/pagas15/" class="social__link"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-				</div>
+				<nav>
+					<ul class="social">
+						<li><a href="https://t.me/pagas15"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.instagram.com/pagas15/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.facebook.com/anton.klymko"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<li><span id="tooptip" tooltip="Кликните чтобы скопировать мою электронную почту в буфер обмена"><a class="email" href="mailto:ghbdtn1104202@gmail.com" target="_self" data-clipboard-text="ghbdtn1104202@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></span></li>
+						<li><a href="https://vk.com/anton_klymko.pagas15"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/pagas15/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+					</ul>
+				</nav>
 			</div>
 		</div>
 	</section>
-	<section class="project" id="project">
+	<section class="project theme1" id="project">
 		<div class="wrapper">
 			<div class="project-wrap">
 				<h3>Мои работы</h3>
@@ -96,22 +98,21 @@
 						<a class="btn-view" href="http://artrogormax.ru/">Посмотреть</a>
 					</div>
 				</div>
-				<div class="social">
-					<a href="https://t.me/pagas15" class="social__link"><i class="fa fa-telegram" aria-hidden="true"></i></a>
-					<a href="https://www.instagram.com/pagas15/" class="social__link"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-					<a href="https://www.facebook.com/anton.klymko" class="social__link"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-					<a href="mailto:ghbdtn1104202@gmail.com" class="social__link"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-					<a href="https://vk.com/anton_klymko.pagas15" class="social__link"><i class="fa fa-vk" aria-hidden="true"></i></a>
-					<a href="https://www.linkedin.com/in/pagas15/" class="social__link"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-				</div>
-
+				<nav>
+					<ul class="social">
+						<li><a href="https://t.me/pagas15"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.instagram.com/pagas15/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.facebook.com/anton.klymko"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<li><span tooltip="Кликните чтобы скопировать мою электронную почту в буфер обмена"><a class="email" href="mailto:ghbdtn1104202@gmail.com" target="_self" data-clipboard-text="ghbdtn1104202@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></span></li>
+						<li><a href="https://vk.com/anton_klymko.pagas15"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/pagas15/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+					</ul>
+				</nav>
 			</div>
 		</div>
 	</section>
-	
-
-
 	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
+	<script type="text/javascript" src="js/clipboard.min.js"></script>
 	<script type="text/javascript" src="js/scripts.min.js"></script>
 </body>
 </html>
