--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -98,6 +98,32 @@
 						<a class="btn-view" href="http://artrogormax.ru/">Посмотреть</a>
 					</div>
 				</div>
+			</div>
+		</div>
+	</section>
+	<section class="services">
+		<div class="wrapper">
+			<div class="services-wrap">
+				<h3>Мои услуги</h3>
+				<div class="services-list">
+					<div class="services-list__item">
+						<h4>Верстка</h4>
+						<p>Просто делаю сайт по вашему макету или примеру(адаптивность и оптимизация входят сюда)</p>
+					</div>
+					<div class="services-list__item">
+						<h4>Адаптивность</h4>
+						<p>Делаю приятнуй адаптивность страницы(например планшетная версия сайта или телефонная) и любой которой вам нужно</p></div>
+					<div class="services-list__item">
+						<h4>Оптимизация</h4>
+						<p>Делаю чтобы ваш сайт загружался быстро</p></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer class="footer theme1">
+		<div class="wrapper">
+			<div class="footer-wrap">
 				<nav>
 					<ul class="social">
 						<li><a href="https://t.me/pagas15"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
@@ -110,7 +136,7 @@
 				</nav>
 			</div>
 		</div>
-	</section>
+	</footer>
 	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
 	<script type="text/javascript" src="js/clipboard.min.js"></script>
 	<script type="text/javascript" src="js/scripts.min.js"></script>
