fix text , thank

--- a/SiteForPr4 (port)/index.html
+++ b/SiteForPr4 (port)/index.html
@@ -22,8 +22,8 @@
 	<section class="headbox">
 		<div class="wrapper">
 			<div class="headbox-wrap">
-				<h1>Я Антон Клымко</h1>
-				<p class="headbox-wrap__text">Я HTML-верстальщик, создаю одностраничные сайты, посадочные страницы, экспериментирую с вёрсткой</p>
+				<h1>Антон Клымко</h1>
+				<p class="headbox-wrap__text">HTML-верстальщик, создаю одностраничные сайты, посадочные страницы, экспериментирую с вёрсткой</p>
 				<div class="hr"></div>
 				<nav>
 					<ul class="social">
@@ -51,7 +51,7 @@
 					</div>
 					<div class="project-wrap__text-box">
 						<h2>Mini</h2>
-						<p class="project-wrap__center-text">Свёрстано для креативной студии которая создаёт дизайны, бренды и сайты с посадкой на WordPress</p>
+						<p class="project-wrap__center-text">Свёрстано для креативной студии, которая создаёт дизайны, бренды и сайты с посадкой на WordPress</p>
 						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, Slick slider, GoogleMapsApi</p>
 						<a class="btn-view" href="https://pagas15.github.io/SiteForPr2%20(mini)/">Посмотреть</a>
 					</div>
@@ -65,7 +65,7 @@
 					</div>
 					<div class="project-wrap__text-box">
 						<h2>Photograf-portfolio</h2>
-						<p class="project-wrap__center-text">Свестал сайт портфолио для фотографа, было приятно верстать так как был приятный дизайн сайта</p>
+						<p class="project-wrap__center-text">Сверстал сайт портфолио для фотографа, было особенно приятно верстать так как был приятный дизайн сайта</p>
 						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, Slick slider, GoogleMapsApi</p>
 						<a class="btn-view" href="https://pagas15.github.io/photograf-portfolio/">Посмотреть</a>
 					</div>
@@ -79,7 +79,7 @@
 					</div>
 					<div class="project-wrap__text-box">
 						<h2>Test-slider</h2>
-						<p class="project-wrap__center-text">Сделал для одного заказчика чисто один адаптивный слайдер, с первого раза ему всё понравилось</p>
+						<p class="project-wrap__center-text">Сделал для заказчика адаптивный слайдер.</p>
 						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, Slick slider</p>
 						<a class="btn-view" href="https://pagas15.github.io/test/">Посмотреть</a>
 					</div>
@@ -93,7 +93,7 @@
 					</div>
 					<div class="project-wrap__text-box">
 						<h2>Form</h2>
-						<p class="project-wrap__center-text">Здесь нужно было сверстать рабочую форму отправки, которая появляется через 10 секунд(зелёная) и отправляет данные на email</p>
+						<p class="project-wrap__center-text">Сверстал рабочую форму отправки, которая появляется через определённый интервал времени (10 секунд) и отправляет данные на email</p>
 						<p class="project-wrap__date">В работе использовались: html5, css3, js(jquery), Cross browser, php</p>
 						<a class="btn-view" href="http://artrogormax.ru/">Посмотреть</a>
 					</div>
@@ -108,14 +108,14 @@
 				<div class="services-list">
 					<div class="services-list__item">
 						<h4>Верстка</h4>
-						<p>Просто делаю сайт по вашему макету или примеру(адаптивность и оптимизация входят сюда)</p>
+						<p>Разрабатываю сайт по вашему макету или примерам (адаптивность и оптимизация включены)</p>
 					</div>
 					<div class="services-list__item">
 						<h4>Адаптивность</h4>
-						<p>Делаю приятные адаптивные страницы (например планшетная версия сайта или телефонная) и любой которой вам нужно</p></div>
+						<p>Разрабатываю адаптивные страницы по требованию заказчика</p></div>
 					<div class="services-list__item">
 						<h4>Оптимизация</h4>
-						<p>Делаю чтобы ваш сайт загружался быстро</p></div>
+						<p>Провожу анализ и делаю оптимизацию сайта для быстрой загрузки страниц.</p></div>
 					</div>
 				</div>
 			</div>
