--- a/project/usmile/index.html
+++ b/project/usmile/index.html
@@ -167,6 +167,246 @@
 							</div>
 						</div>
 					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/3.jpg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/4.jpg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/5.jpg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/6.jpg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/7.jpg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/8.jpeg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/9.jpg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/10.jpg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/11.jpeg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/12.jpg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/13.jpeg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/14.jpeg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/15.jpeg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/16.jpeg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/17.jpeg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/18.jpg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/19.png" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/20.jpeg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/21.png" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="result-slider__item">
+						<div class="result__block-review">
+							<div class="result__img"><img src="img/content/review/22.jpg" alt=""></div>
+							<div class="result__content">
+								<p class="result__title">Отзыв пациента:</p>
+								<p class="result__review">
+									Раньше я комплексовала из-за кривых зубов, это не придавало мне уверенности. Но все изменилось, когда я пришла на прием к Александре Николаевной. Такого профессионализма я не видела ни в одной клинике! Теперь я счастливая обладательница голливудской улыбки
+								</p>
+								<p class="result__title">Что было сделано: <span class="result__review">Лечение зубов, Имплантация</span></p>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="result-slider-dop slider-wrap-dop">
 					<div class="result-slider-dots slider-dots">
